# MaqroDealerships

./: .env  .gitignore  DEPLOYMENT.md  DEPLOYMENT_RENDER.md  RAG_TESTING.md  README.md  SMS_FEATURES_README.md  app.py  build.sh  build_rag_index.py  config.yaml  demo_conversational_rag.py  dev.db  env.example  example_conversation_response.py  example_integration.py  flyer.html  install.sh  main.py  package-lock.json  pyproject.toml  quick_test.py  render.yaml  requirements.txt  run_all_tests.py  sample_inventory.csv  setup.py  start.sh  test_actual_conversations.py  test_ai_response_generator.py  test_api.py  test_api_endpoints.py  test_api_key.py  test_calendar_url.py  test_conversational_rag.py  test_database_schema.py  test_db_rag.py  test_enhanced_sms_parser.py  test_entity_parser.py  test_imports.py  (+20 more)
.cursor/rules/: apicalls.mdc
backend/: README.md  __init__.py  ai_services.py  app.py  database.py  models.py  rag_enhanced.py  response_validation.py  serializers.py
frontend/: README.md  env.example  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: alerts-section.tsx  app-nav.tsx  app-sidebar.tsx  conditional-layout.tsx  feature-list.tsx  footer.tsx  header.tsx  hero.tsx  landing-nav.tsx  leads-section.tsx  performance-overview.tsx  welcome-section.tsx
frontend/lib/: api-client.ts  auth-api.ts  constants.ts  conversations-api.ts  file-parser.ts  inventory-api.ts  inventory-validation.ts  (+4 more)
maqro_rag/: __init__.py  retrieval.py  vector_store.py
src/: __init__.py
tests/: rag_conversational_e2e.md
(+83 files in other folders)
